# veridian

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  docker.yml  pr.yml
dockerfiles/: Dockerfile
extensions/vscode/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
extensions/vscode/client/src/: extension.ts
extensions/vscode/src/: extension.ts
extensions/vscode/syntaxes/: systemverilog.tmLanguage.json
src/: completion.rs  definition.rs  diagnostics.rs  format.rs  lib.rs  main.rs  query.scm  server.rs  sources.rs  support.rs  symbol.rs
src/completion/: keyword.rs
src/definition/: def_types.rs  extract_defs.rs  parse_defs.rs
test_data/: complete.sv  definition_test.sv  ind.sv  interface_obj.sv  query_ports.sv  query_test.sv  simple_bus.svh  test_inter.sv  top.sv  top_inc.sv  verilator_errors.txt
test_data/.hdl_checker/: cache.json
test_data/diag/: diag_test.sv
tests/: completion_test.rs
veridian-slang/: Cargo.toml  build.rs
veridian-slang/slang_wrapper/: CMakeLists.txt
veridian-slang/slang_wrapper/src/: BasicClient.h  FormatBuffer.h  basic_client.cpp  slang_lib.cpp  slang_wrapper.h
veridian-slang/src/: lib.rs  wrapper.rs
verilogls_slang_wrapper/: Cargo.toml  build.rs
