[package]
name = "veridian"
version = "0.1.0"
authors = ["Vivek Malneedi <vivekmalneedi@gmail.com>"]
edition = "2018"

[features]
slang = ["veridian_slang"]

[dependencies]
sv-parser = "0.13.1"
log = "0.4.19"
tower-lsp = "0.19.0"
flexi_logger = "0.25.6"
ropey = "1.6.0"
tokio = { version = "1.29.1", features = ["macros", "io-std", "rt-multi-thread"] }
path-clean = "1.0.1"
pathdiff = "0.2.1"
walkdir = "2.3.3"
serde_yaml = "0.9.25"
anyhow = "1.0.72"
serde = "1.0.179"
which = "4.4.0"
regex = "1.9.1"
structopt = "0.3.26"
strum = "0.25.0"
strum_macros = "0.25.1"

[dependencies.veridian_slang]
optional = true
path = "veridian-slang"
