[package]
name = "veridian_slang"
version = "0.1.0"
authors = ["Vivek Malneedi <vivekmalneedi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.57.0"
cc = { version = "1.0.66", features = ["parallel"] }
reqwest = {version = "0.10.9", features = ["blocking"] }
flate2 = "1.0.19"
tar = "0.4.30"

[dev-dependencies]
tempdir = "0.3.7"
serial_test = "0.5.1"
