[package]
name = "veridian_slang"
version = "0.1.0"
authors = ["Vivek Malneedi <vivekmalneedi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.58.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
flate2 = "1.0.20"
tar = "0.4.35"
cmake = "0.1.50"

[dev-dependencies]
tempdir = "0.3.7"
serial_test = "0.5.1"
